# ghtraffic

./: .gitignore  1  Cargo.toml  README.md  test.txt
.github/workflows/: cd.yml  ci.yml
infrastructure/: acm.tf  api.tf  iam.tf  lambdas.tf  main.tf  output.tf  route53.tf  s3.tf  vars.tf
scripts/: build.py
src/: lib.rs  requests.rs  templates.rs
src/bins/: calculate_traffic.rs  get_github_data.rs  get_repositories_data.rs  get_repository_data.rs  hello_world.rs  list_repositories.rs  render_website.rs
src/env/: mod.rs  variables.rs
src/file_management/: file_manager.rs  mod.rs  s3.rs
src/files/: errors.rs  file_manager.rs  mod.rs
src/github/: client.rs  errors.rs  mod.rs  models.rs
src/requests/: consts.rs  mod.rs
src/templates/: mod.rs  template_manager.rs
templates/: authenticated.html  index.html  repo_info.html  repo_list.html  script.js  test.html  welcome.html
