[package]
name = "ghtraffic"
version = "0.1.0"
edition = "2021"

[lib]
name = "ghtraffic"
path = "src/lib.rs"

[[bin]]
name = "render_website"
path = "src/bins/render_website.rs"

[[bin]]
name = "get_github_data"
path = "src/bins/get_github_data.rs"

[dependencies]
anyhow = "1.0.86"
askama = "0.12.1"
aws-config = { version = "1.5.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.36.0" 
aws-smithy-runtime-api = "1.7.0"
lambda_http = "0.11.1"
openssl = { version = "0.10.64", features = ["vendored"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1", features = ["macros"] }
